# Work_Schedule_Manager

./: .gitignore  EventProcesses.py  FileProcesses.py  ImageProcesses.py  LICENSE  README.md  crop_image_test.py  main_logger.py  pyproject.toml  requirements.txt  run_main.py  sample.py  variables_sample.py
src/: EventProcesses.py  main_logger.py
src/Services/: quotes.py
src/Work_schedule_manager/: EventProcesses.py  FileProcesses.py  ImageProcesses.py
src/Work_schedule_manager/services/: GoogleCalendarManager.py  OutlookCalendarManager.py  quotes.py
src/Work_schedule_manager/services/utils/: store.py
